# OpenCV-Projects

./: .gitignore  .gitmodules  CMakeLists.txt  CMake_OpenCV.txt  README.md
Calibrate/: .gitignore  CMakeLists.txt  Calibrate.cpp  Calibrate.hpp  Fisheye.cpp  Fisheye.hpp  general.hpp  main.cpp  main_calibrate.cpp  main_fisheye.cpp
Calibrate/include/: Calibrate.hpp  Fisheye.hpp
Calibrate/include/Calibrate/: Calibrate.hpp  Fisheye.hpp  general.hpp
Calibrate/src/: Calibrate.cpp  Fisheye.cpp
Jpeg/: CMakeLists.txt  jpeg.m  jpeg_compression.cpp
PictureByParts/: PictureByParts.py
Segment/: CMakeLists.txt  README.md  main.cpp
Segment/egbis/: CMakeLists.txt  egbis.cpp  egbis.h
Segment/egbis/egbis/: CMakeLists.txt  convolve.h  disjoint-set.cpp  filter.cpp  filter.h  image.h  imconv.h  imutil.h  misc.cpp  misc.h  pnmfile.h  segment-graph.cpp  segment-image.cpp
Segment/include/: Contour.hpp  Segmenter.hpp  general.hpp  imgops.hpp
Segment/include/Segment/: Segmenter.hpp
Segment/src/: Contour.cpp  Segmenter.cpp  Stitch.cpp  imgops.cpp
Stitch/: CMakeLists.txt  Stitch.cpp  Stitch.hpp  combine_parts.cpp  general.hpp  imgops.cpp  imgops.hpp  main.cpp  patch_demo.cpp
Stitch/include/: Contour.hpp  Stitch.hpp  general.hpp  imgops.hpp
Stitch/include/Stitch/: Stitch.hpp  general.hpp  imgops.hpp
Stitch/src/: Contour.cpp  Stitch.cpp  imgops.cpp
include/general/: Contour.hpp  general.hpp  imgops.hpp
optflow/: CMakeLists.txt  main.cpp
src/: Contour.cpp  imgops.cpp  modules.cpp  optflow.cpp  tracker.cpp
